--- a/package.json
+++ b/package.json
@@ -14,36 +14,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/ngrok": "^4.1.3",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/stack": "^7.2.10",
-    "@supabase/supabase-js": "^2.49.4",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.0.5",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.4",
+    "@supabase/supabase-js": "^2.38.4",
     "expo": "^52.0.46",
     "expo-dev-client": "~5.0.4",
-    "expo-dev-launcher": "^5.0.35",
-    "expo-location": "~18.0.10",
+    "expo-dev-launcher": "^5.0.17",
     "expo-status-bar": "~2.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "^0.76.9",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.18.0",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.19.13"
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
+    "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-universe": "^12.1.0",
-    "prettier": "^3.5.3",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.1",
+    "prettier": "^3.2.5",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
